@@ -1,3 +1,10 @@
+Thu Jan 22 00:37:47 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
+
+	* class.c (rb_define_method): `initialize' should always be
+	  private, even if it defined by C extensions.
+
+	* eval.c (rb_eval): `initialize' should always be private.
+
 Thu Jan 22 16:21:08 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
 	* eval.c (rb_eval): some singleton class def cause SEGV.
@@ -10,7 +17,8 @@ Wed Jan 21 01:43:42 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
 	* eval.c (PUSH_FRAME): do not use ALLOCA_N().  crash on some
 	  platforms that use missing/alloca.c.
 
-	* regex.c (re_compile_pattern): too many pops for non register subexpr.
+	* regex.c (re_compile_pattern): too many pops for non register
+	  subexpr.
 
 	* parse.y (yylex): open parentheses after identifiers are argument 
 	  list, even if whitespaces have seen.
